# marks

./: .gitignore  .sqllsrc.json  Cargo.toml  README.md  marks.code-workspace
client/: Cargo.toml  LICENSE-MIT  index.html  index.scss
client/src/: about.rs  app.rs  auth.rs  board.rs  layout.rs  main.rs  misc_yew.rs  not_found.rs  rtr_client.rs  util.rs
common/: Cargo.toml
common/src/: lib.rs
dioxus-client/: Cargo.toml
dioxus-client/src/: main.rs
server/: .env  Cargo.toml
server/migrations/2024-03-14-103512_auth/: down.sql  up.sql
server/migrations/2024-03-20-164918_notes/: down.sql  up.sql
server/src/: auth.rs  bearer_token.rs  boards.rs  db.rs  main.rs  schema.rs  views.rs
xtask/: Cargo.toml
xtask/src/: main.rs
