[package]
name = "client"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo-net = "0.5.0"
gloo-storage = "0.3.0"
yew = { version="0.21", features=["csr"] }
common = { path = "../common" }
serde = { version = "1.0.197", features = ["std", "derive"]}
serde_json = "1.0.114"
yew-hooks = "0.3.1"
web-sys = { version = "0.3.69", features = ["BroadcastChannel"] }
serde-wasm-bindgen = "0.6.5"
jwt = "0.16.0"
wasm-bindgen-futures = "0.4.42"
gloo-utils = "0.2.0"
yew-router = "0.18.0"
console_error_panic_hook = "0.1.7"
gloo-console = "0.3.0"
